# etale

./: Cargo.toml
.github/workflows/: release.yml
docs/: architecture-sheaf-blueprint.md
npm/: install.js  package.json
src/: convert.rs  inline.rs  lcs.rs  lines.rs  main.rs  unified.rs
tests/: integration.rs
