[package]
name = "etale"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Structural diff and merge CLI for JSON, YAML, TOML, and text — powered by tate's patch algebra"
repository = "https://github.com/j-yang/etale"
keywords = ["diff", "merge", "git", "json", "structured-data"]
categories = ["command-line-utilities", "text-processing"]

[dependencies]
tate = { version = "0.7", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
